# ios-toolkit

./: .gitignore  Makefile  PROGRESS.md  README.md  codex_prompt.txt  iOS-Toolkit-Agent-Plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
ios_toolkit/: __init__.py  cli.py  device.py  dfu.py  ipsw.py  logs.py  models.py  recovery.py  restore.py  utils.py
schema_logging_patch/.github/: pull_request_template.md
schema_logging_patch/.github/workflows/: ci.yml
schema_logging_patch/ios_toolkit/: cli.py  device.py  models.py  restore.py  utils.py
scripts/: build_windows.ps1
tests/: test_cli.py  test_device.py  test_device_dfu.py  test_dfu.py  test_diag.py  test_ipsw.py  test_logs.py  test_recovery.py  test_restore.py
